# LoreGraph

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  Technical.html  alembic.ini  app.01589f145f.js  app.0215da508b.js  app.0dff0d99f4.js  app.1473e7e030.js  app.19ca257b38.js  app.1bcf4a0371.js  app.27c5f7ad74.js  app.2f089258f2.js  app.31512b4eee.js  app.33e060cbf5.js  app.3586afb5d7.js  app.38585a207a.js  app.43ad3dc655.js  app.46a3dc6e17.js  app.49b36631f0.js  app.526a9fc40c.js  app.5d3b43a8d3.js  app.6c205cea87.js  app.6fdfb24069.js  app.713a6cb7bd.js  app.72eb5b71f9.js  app.77e5978b86.js  app.77fb30e9bf.js  app.7abb24f3fd.js  app.8219e39dbe.js  app.87311f2bed.js  app.874672f2a4.js  app.8daeb82e6d.js  app.9c4d984830.js  app.aad6b56117.js  app.adb941135c.js  (+21 more)
.claude/: launch.json  settings.json
.claude/commands/: wmg.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: index-A0-5zU4e.js  index-C_7dKZ_A.css  index-DLoKbhIZ.js  index-_pXneQE_.css
data/exports/: alice.i18n.json  alice.json  xyj.factions.json  xyj.i18n.json
docs/: 7-pass-pipeline.md  architecture.md  deployment.md  references.bib
examples/: README.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_pass8_constraint.py  0003_cognition_foundation.py
scripts/: _validate_pass2.py  acquire_book.py  build_frontend_data.py  canonicalize_book.py  export_book.py  translate_book.py
src/loregraph/: __init__.py  config.py
src/loregraph/cli/: _runner.py  main.py
src/loregraph/db/: __init__.py  engine.py  repository.py  schema.py
src/loregraph/llm/: __init__.py  client.py  embeddings.py  gleaning.py  parser.py
src/loregraph/llm/prompts/: pass2_entity_system.j2  pass2_entity_user.j2  pass3_cluster_batch_system.j2  pass3_cluster_batch_user.j2  pass3_cluster_sanity_system.j2  pass3_cluster_sanity_user.j2  pass3_cluster_system.j2  pass3_cluster_user.j2  pass5_relation_system.j2  pass5_relation_user.j2  pass6_glucose_system.j2  pass6_glucose_user.j2  pass7_cove_system.j2  pass7_cove_user.j2  pass8_note_system.j2  pass8_note_user.j2
src/loregraph/models/: __init__.py  atoms.py  edges.py  entities.py  enums.py  glucose.py  runs.py
src/loregraph/pipeline/: __init__.py  canonicalize.py  context.py  orchestrator.py  pass1_chunk.py  pass2_entity.py  pass3_cluster.py  pass4_coref.py  pass5_relation.py  pass6_glucose.py  pass7_cove.py  pass8_note.py
src/loregraph/utils/: __init__.py  clustering.py  spans.py  tokens.py
src/loregraph/web/: README.md  build-landing.cjs  dependencies.py  schemas.py  serve-landing.cjs  server.py
src/loregraph/web/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  (+3 more)
tests/integration/: conftest.py  test_db.py  test_pass1_pass2.py  test_pass3_pass4.py  test_pass5.py  test_pass6.py  test_pass7.py  test_web.py
tests/unit/: conftest.py  test_canonicalize.py  test_chunking.py  test_clustering.py  test_llm_client.py  test_llm_parser.py  test_models.py  test_smoke.py  test_spans.py
(+35 files in other folders)
