[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "loregraph"
description = "Knowledge graphs from closed-world fiction, with evidence on every edge."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Yunyue Li", email = "YunyueLi@users.noreply.github.com" },
]
keywords = [
    "knowledge-graph",
    "narrative",
    "literature",
    "llm",
    "extraction",
    "claude",
    "gpt",
    "deepseek",
    "graphrag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dynamic = ["version"]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgresql]>=4.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
loregraph = "loregraph.cli.main:app"

[project.urls]
Homepage = "https://github.com/YunyueLi/LoreGraph"
Repository = "https://github.com/YunyueLi/LoreGraph"
Issues = "https://github.com/YunyueLi/LoreGraph/issues"

[tool.hatch.version]
path = "src/loregraph/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/loregraph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/loregraph",
    "migrations",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "SIM", "RUF"]
# B008: Typer / FastAPI / Click all rely on `arg: T = framework.Option(...)`
# defaults; the rule fires false positives across our CLI and (future) web layer.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests with no external deps",
    "integration: tests requiring postgres",
    "e2e: end-to-end pipeline tests; live LLM if LOREGRAPH_E2E_LIVE=1",
]
addopts = "--strict-markers -m unit"
testpaths = ["tests"]
